# Pour chaque exercice, ajouter une ligne
# add_executable( Nom_de_la_cible fichier1.cpp fichier2.cpp ... fichierN.cpp )
# avec le ou les fichiers à compiler

add_executable( Ex1-0-Hello_World Ex1-0.cpp)
add_executable( Ex1-1-Hello Ex1-1.cpp)
add_executable( Ex1-2-Dessin Ex1-2.cpp)
add_executable( Ex1-3-Planetes Ex1-3.cpp)